# memoryforge

./: .gitignore  ARCHITECTURE.md  CHANGELOG.md  LICENSE  README.md  debug_migration.py  pyproject.toml
memoryforge/: __init__.py  __main__.py  cli.py  config.py  migrate.py  models.py
memoryforge/core/: __init__.py  confidence_scorer.py  conflict_resolver.py  embedding_factory.py  embedding_service.py  git_integration.py  git_scanner.py  graph_builder.py  local_embedding_service.py  memory_consolidator.py  memory_manager.py  project_router.py  retrieval.py  validation.py
memoryforge/mcp/: __init__.py  server.py
memoryforge/storage/: __init__.py  qdrant_store.py  sqlite_db.py
memoryforge/sync/: adapter.py  encryption.py  local_file_adapter.py  manager.py
scripts/: benchmark.py
tests/: conftest.py  test_consolidation.py  test_git_integration.py  test_memory_manager.py  test_migration.py  test_project_router.py  test_retrieval.py  test_storage.py  test_sync_encryption.py  test_sync_manager.py  test_v3_features.py  test_validation.py
tests/integration/: test_sync_roundtrip.py
